--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm --workspace backend start"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
