Ignore env files

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,15 @@ replay_pid*
 /frontend/node_modules
 
 .env
+
+/backend/.env
+/backend/.env.development
+/backend/.env.production
+
+/frontend/.env
+/frontend/.env.development
+/frontend/.env.production
+
+# Ignore env files
+backend/.env*
+frontend/.env*
