fix reset password

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,2 +1,5 @@
 # Dùng khi build production (deploy)
 REACT_APP_API_URL=https://personalweb-5cn1.onrender.com
+
+FRONTEND_URL=https://personal-web-wheat-xi.vercel.app
+
